--- a/src/patternfly/components/Login/login.scss
+++ b/src/patternfly/components/Login/login.scss
@@ -1,7 +1,6 @@
 .pf-c-login {
   --pf-c-login--PaddingTop: var(--pf-global--spacer--lg);
   --pf-c-login--PaddingBottom: var(--pf-global--spacer--lg);
-  --pf-c-login--xl--BackgroundImage: none;
 
   // container
   --pf-c-login__container--xl--GridColumnGap: var(--pf-global--spacer--3xl);
@@ -36,8 +35,9 @@
   }
 
   // main
-  --pf-c-login__main--BackgroundColor: var(--pf-global--BackgroundColor--light-100);
+  --pf-c-login__main--BackgroundColor: var(--pf-global--BackgroundColor--100);
   --pf-c-login__main--MarginBottom: var(--pf-global--spacer--lg);
+  --pf-c-login__main--BoxShadow: var(--pf-global--BoxShadow--xl);
 
   @media (min-width: $pf-global--breakpoint--xl) {
     --pf-c-login__main--MarginBottom: 0;
@@ -95,7 +95,8 @@
   --pf-c-login__main-footer-band--PaddingRight: var(--pf-global--spacer--md);
   --pf-c-login__main-footer-band--PaddingBottom: var(--pf-global--spacer--lg);
   --pf-c-login__main-footer-band--PaddingLeft: var(--pf-global--spacer--md);
-  --pf-c-login__main-footer-band--BackgroundColor: var(--pf-global--BackgroundColor--200);
+  --pf-c-login__main-footer-band--BorderTopColor: var(--pf-global--BorderColor--100);
+  --pf-c-login__main-footer-band--BorderTopWidth: var(--pf-global--BorderWidth--sm);
   --pf-c-login__main-footer-band-item--PaddingTop: var(--pf-global--spacer--md);
 
   // footer
@@ -119,10 +120,6 @@
   min-height: 100vh;
   padding-top: var(--pf-c-login--PaddingTop);
   padding-bottom: var(--pf-c-login--PaddingBottom);
-
-  @media (min-width: $pf-global--breakpoint--xl) {
-    background-image: var(--pf-c-login--xl--BackgroundImage);
-  }
 
   @media (min-width: $pf-global--breakpoint--sm) {
     align-items: center;
@@ -169,6 +166,8 @@
   align-self: start;
   margin-bottom: var(--pf-c-login__main--MarginBottom);
   background-color: var(--pf-c-login__main--BackgroundColor);
+  grid-area: main;
+  box-shadow: var(--pf-c-login__main--BoxShadow);
 
   // If the first child isn't a header, then we need to put the header's top padding there
   > :first-child:not(.pf-c-login__main-header) {
@@ -270,7 +269,7 @@
 .pf-c-login__main-footer-band {
   padding: var(--pf-c-login__main-footer-band--PaddingTop) var(--pf-c-login__main-footer-band--PaddingRight) var(--pf-c-login__main-footer-band--PaddingBottom) var(--pf-c-login__main-footer-band--PaddingLeft);
   text-align: center;
-  background-color: var(--pf-c-login__main-footer-band--BackgroundColor);
+  border-top: var(--pf-c-login__main-footer-band--BorderTopWidth) solid var(--pf-c-login__main-footer-band--BorderTopColor);
 
   > * + * {
     padding-top: var(--pf-c-login__main-footer-band-item--PaddingTop);
