--- a/src/patternfly/components/Login/themes/dark/login.scss
+++ b/src/patternfly/components/Login/themes/dark/login.scss
@@ -1,6 +1,10 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
 @mixin pf-theme-dark-login() {
+  .pf-c-login {
+    --pf-c-login__main--BackgroundColor: var(--pf-global--BackgroundColor--300);
+  }
+
   .pf-c-login__header,
   .pf-c-login__footer {
     @include pf-theme-dark--t-dark;
