--- a/src/patternfly/components/Button/button.hbs
+++ b/src/patternfly/components/Button/button.hbs
@@ -1,14 +1,15 @@
 <{{#if button--type}}{{button--type}}{{else if button--IsInlineLinkSpan}}span{{else if button--IsAnchor}}a{{else}}button{{/if}} class="pf-c-button
-  {{~#if button--IsExpanded}} pf-m-expanded{{/if}}
-  {{~#if button--IsProgress}} pf-m-progress{{/if}}
-  {{~#if button--IsInProgress}} pf-m-in-progress{{/if}}
-  {{~#if button--IsInline}} pf-m-inline{{/if}}
-  {{~#if button--IsDisabled}}
+  {{#if button--IsExpanded}} pf-m-expanded{{/if}}
+  {{#if button--IsProgress}} pf-m-progress{{/if}}
+  {{#if button--IsInProgress}} pf-m-in-progress{{/if}}
+  {{#if button--IsInline}} pf-m-inline{{/if}}
+  {{#if button--IsPlain}} pf-m-plain{{/if}}
+  {{#if button--IsDisabled}}
     {{#if (concat button--type button--IsInlineLinkSpan button--IsAnchor)}}
       pf-m-disabled
     {{/if}}
   {{/if}}
-  {{~#if button--modifier}} {{button--modifier}}{{/if}}"
+  {{#if button--modifier}} {{button--modifier}}{{/if}}"
   {{#if button--IsSubmit}}
     type="submit"
   {{else if button--IsReset}}
