--- a/src/patternfly/components/Label/label.hbs
+++ b/src/patternfly/components/Label/label.hbs
@@ -5,31 +5,11 @@
   {{#if label--IsAdd}} pf-m-add{{/if}}
   {{#if label--IsEditable}} pf-m-editable{{/if}}
   {{#if label--IsEditableActive}} pf-m-editable-active{{/if}}
-  {{#ifEquals label--color "blue"}}
-    pf-m-blue
-  {{/ifEquals}}
-  {{#ifEquals label--color "green"}}
-    pf-m-green
-  {{/ifEquals}}
-  {{#ifEquals label--color "orange"}}
-    pf-m-orange
-  {{/ifEquals}}
-  {{#ifEquals label--color "red"}}
-    pf-m-red
-  {{/ifEquals}}
-  {{#ifEquals label--color "purple"}}
-    pf-m-purple
-  {{/ifEquals}}
-  {{#ifEquals label--color "cyan"}}
-    pf-m-cyan
-  {{/ifEquals}}
-  {{#ifEquals label--color "gold"}}
-    pf-m-gold
-  {{/ifEquals}}
+  {{#if label--color}}
+    pf-m-{{label--color}}
+  {{/if}}
   {{#if label--modifier}} {{label--modifier}}{{/if}}"
-  {{#if label--IsOverflow}}
-    type="button"
-  {{else if label--IsAdd}}
+  {{#if (concat label--IsOverflow label--IsAdd)}}
     type="button"
   {{/if}}
   {{#if label--attribute}}
@@ -44,7 +24,7 @@
   {{/label-content}}
   {{#if label--isRemovable}}
     {{#> label-actions}}
-      {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'id="' label--id '-button"
+      {{#> button button--IsPlain=true button--attribute=(concat 'id="' label--id '-button"
     aria-label="Remove" aria-labelledby="' label--id '-button ' label--id '-text"')}}
         <i class="fas fa-times fa-fw" aria-hidden="true"></i>
       {{/button}}
