--- a/src/patternfly/components/Select/select-toggle-typeahead.hbs
+++ b/src/patternfly/components/Select/select-toggle-typeahead.hbs
@@ -1,8 +1,9 @@
 {{#if select--IsDisabled}}
   {{#> form-control controlType="input"
     input="true"
+    form-control--IsDisabled='true'
     form-control--modifier="pf-v5-c-select__toggle-typeahead"
-    form-control--attribute=(concat 'type="text" id="' select--id '-typeahead" aria-label="Type to filter" placeholder="' select-typeahead--Placeholder '" disabled')}}
+    form-control--attribute=(concat 'type="text" id="' select--id '-typeahead" aria-label="Type to filter" placeholder="' select-typeahead--Placeholder '"')}}
   {{/form-control}}
 {{else}}
   {{#if select--IsInvalid}}
