--- a/src/patternfly/components/Nav/examples/Navigation.css
+++ b/src/patternfly/components/Nav/examples/Navigation.css
@@ -1,5 +1,22 @@
-.ws-core-c-navigation:not([id*="tertiary"]):not([id*="light-mode"]) .pf-v5-c-nav{
-  background-color: var(--pf-v5-global--BackgroundColor--dark-300);
+#ws-core-c-navigation-default,
+#ws-core-c-navigation-basic,
+#ws-core-c-navigation-grouped,
+#ws-core-c-navigation-grouped-nav,
+#ws-core-c-navigation-grouped-nav-no-titles,
+#ws-core-c-navigation-expanded,
+#ws-core-c-navigation-expanded-with-subnav-titles,
+#ws-core-c-navigation-mixed,
+#ws-core-c-navigation-horizontal,
+#ws-core-c-navigation-horizontal-overflow,
+#ws-core-c-navigation-horizontal-subnav,
+#ws-core-c-navigation-horizontal-subnav-overflow,
+#ws-core-c-navigation-drilldown,
+#ws-core-c-navigation-nav-with-drilldown-menu .pf-v5-c-nav,
+#ws-core-c-navigation-level-2-drilldown,
+#ws-core-c-navigation-level-3-drilldown,
+#ws-core-c-navigation-nav-with-flyout .pf-v5-c-nav,
+#ws-core-c-navigation-grouped-nav-no-titles-no-margin-top {
+  padding: 0;
 }
 
 #ws-core-c-navigation-horizontal-in-masthead,
