--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -5,19 +5,19 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 // stylelint-enable
 
 :root {
-  --#{$page}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-300);
-  --#{$page}--inset: var(--#{$pf-global}--spacer--md);
-  --#{$page}--xl--inset: var(--#{$pf-global}--spacer--lg);
+  --#{$page}--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
+  --#{$page}--inset: var(--pf-t--global--spacer--md);
+  --#{$page}--xl--inset: var(--pf-t--global--spacer--xl);
 
   // Header
-  --#{$page}__header--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-100);
+  --#{$page}__header--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
   --#{$page}__header--ZIndex: var(--#{$pf-global}--ZIndex--md);
   --#{$page}__header--MinHeight: #{pf-size-prem(76px)}; // fixed height for header to ensure consistency across screen sizes.
 
   // Header brand
-  --#{$page}__header-brand--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$page}__header-brand--xl--PaddingRight: var(--#{$pf-global}--spacer--xl);
-  --#{$page}__header-brand--xl--PaddingLeft: var(--#{$pf-global}--spacer--lg);
+  --#{$page}__header-brand--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$page}__header-brand--xl--PaddingRight: var(--pf-t--global--spacer--xl);
+  --#{$page}__header-brand--xl--PaddingLeft: var(--pf-t--global--spacer--xl);
 
   @media (min-width: $pf-v5-global--breakpoint--xl) {
     --#{$page}__header-brand--PaddingLeft: var(--#{$page}__header-brand--xl--PaddingLeft);
@@ -25,22 +25,22 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   }
 
   // Toggle
-  --#{$page}__header-sidebar-toggle__c-button--PaddingTop: var(--#{$pf-global}--spacer--sm);
-  --#{$page}__header-sidebar-toggle__c-button--PaddingRight: var(--#{$pf-global}--spacer--sm);
-  --#{$page}__header-sidebar-toggle__c-button--PaddingBottom: var(--#{$pf-global}--spacer--sm);
-  --#{$page}__header-sidebar-toggle__c-button--PaddingLeft: var(--#{$pf-global}--spacer--sm);
-  --#{$page}__header-sidebar-toggle__c-button--MarginRight: var(--#{$pf-global}--spacer--md);
+  --#{$page}__header-sidebar-toggle__c-button--PaddingTop: var(--pf-t--global--spacer--sm);
+  --#{$page}__header-sidebar-toggle__c-button--PaddingRight: var(--pf-t--global--spacer--sm);
+  --#{$page}__header-sidebar-toggle__c-button--PaddingBottom: var(--pf-t--global--spacer--sm);
+  --#{$page}__header-sidebar-toggle__c-button--PaddingLeft: var(--pf-t--global--spacer--sm);
+  --#{$page}__header-sidebar-toggle__c-button--MarginRight: var(--pf-t--global--spacer--md);
   --#{$page}__header-sidebar-toggle__c-button--MarginLeft: calc(var(--#{$page}__header-sidebar-toggle__c-button--PaddingLeft) * -1);
-  --#{$page}__header-sidebar-toggle__c-button--FontSize: var(--#{$pf-global}--FontSize--2xl);
+  --#{$page}__header-sidebar-toggle__c-button--FontSize: var(--pf-t--global--icon--size--lg);
 
   // Header brand link
   --#{$page}__header-brand-link--c-brand--MaxHeight: #{pf-size-prem(60px)};
 
   // Header nav
-  --#{$page}__header-nav--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-300);
+  --#{$page}__header-nav--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
   --#{$page}__header-nav--xl--BackgroundColor: transparent;
-  --#{$page}__header-nav--xl--PaddingRight: var(--#{$pf-global}--spacer--xl);
-  --#{$page}__header-nav--xl--PaddingLeft: var(--#{$pf-global}--spacer--xl);
+  --#{$page}__header-nav--xl--PaddingRight: var(--pf-t--global--spacer--xl);
+  --#{$page}__header-nav--xl--PaddingLeft: var(--pf-t--global--spacer--xl);
 
   @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
     --#{$page}__header-nav--BackgroundColor: var(--#{$page}__header-nav--xl--BackgroundColor);
@@ -49,10 +49,10 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   }
 
   // Header tools
-  --#{$page}__header-tools--MarginRight: var(--#{$pf-global}--spacer--md);
-  --#{$page}__header-tools--xl--MarginRight: var(--#{$pf-global}--spacer--lg);
-  --#{$page}__header-tools--c-avatar--MarginLeft: var(--#{$pf-global}--spacer--md);
-  --#{$page}__header-tools-group--MarginLeft: var(--#{$pf-global}--spacer--xl);
+  --#{$page}__header-tools--MarginRight: var(--pf-t--global--spacer--md);
+  --#{$page}__header-tools--xl--MarginRight: var(--pf-t--global--spacer--lg);
+  --#{$page}__header-tools--c-avatar--MarginLeft: var(--pf-t--global--spacer--md);
+  --#{$page}__header-tools-group--MarginLeft: var(--pf-t--global--spacer--xl);
   --#{$page}__header-tools-group--Display: flex;
   --#{$page}__header-tools-item--Display: block;
 
@@ -77,17 +77,27 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   // Sidebar
   --#{$page}__sidebar--ZIndex: var(--#{$pf-global}--ZIndex--sm);
   --#{$page}__sidebar--Width: #{pf-size-prem(290px)};
-  --#{$page}__sidebar--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-300);
+  --#{$page}__sidebar--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
   --#{$page}__sidebar--m-light--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
   --#{$page}__sidebar--m-light--BorderRightWidth: var(--#{$pf-global}--BorderWidth--sm);
   --#{$page}__sidebar--m-light--BorderRightColor: var(--#{$pf-global}--BorderColor--100);
-  --#{$page}__sidebar--BoxShadow: var(--#{$pf-global}--BoxShadow--lg-right);
+  --#{$page}__sidebar--BoxShadow: none;
   --#{$page}__sidebar--Transition: var(--#{$pf-global}--Transition);
   --#{$page}__sidebar--TranslateX: -100%;
   --#{$page}__sidebar--TranslateZ: 0;
   --#{$page}__sidebar--m-expanded--TranslateX: 0;
   --#{$page}__sidebar--xl--TranslateX: 0;
 
+  // Sidebar header
+  --#{$page}__sidebar-header--BorderBottomWidth: var(--pf-t--global--border--width--divider--default);
+  --#{$page}__sidebar-header--BorderBottomColor: var(--pf-t--global--border--color--default);
+  --#{$page}__sidebar-header--PaddingTop: var(--pf-t--global--spacer--sm);
+  --#{$page}__sidebar-header--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$page}__sidebar-title--FontSize: var(--pf-t--global--font--size--heading--xs);
+  --#{$page}__sidebar-title--LineHeight: var(--pf-t--global--font--line-height--heading);
+  --#{$page}__sidebar-title--FontFamily: var(--pf-t--global--font--family--heading);
+  --#{$page}__sidebar-title--FontWeight: var(--pf-t--global--font--weight--heading--bold);
+  
   // Sidebar body
   --#{$page}__sidebar-body--PaddingRight: 0;
   --#{$page}__sidebar-body--PaddingLeft: 0;
@@ -105,22 +115,19 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main--ZIndex: var(--#{$pf-global}--ZIndex--xs);
 
   // Main section
-  --#{$page}__main-section--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-section--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-section--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-section--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-section--xl--PaddingTop: var(--#{$pf-global}--spacer--lg);
-  --#{$page}__main-section--xl--PaddingRight: var(--#{$pf-global}--spacer--lg);
-  --#{$page}__main-section--xl--PaddingBottom: var(--#{$pf-global}--spacer--lg);
-  --#{$page}__main-section--xl--PaddingLeft: var(--#{$pf-global}--spacer--lg);
-  --#{$page}__main-breadcrumb--main-section--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-section--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-300);
-  --#{$page}__main-section--m-light--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
-  --#{$page}__main-section--m-light-100--BackgroundColor: var(--#{$pf-global}--BackgroundColor--150);
-  --#{$page}__main-section--m-dark-100--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-transparent-100);
-  --#{$page}__main-section--m-dark-200--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-transparent-200);
-  --#{$page}__main-breadcrumb--page__main-tabs--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-nav--page__main-tabs--PaddingTop: var(--#{$pf-global}--spacer--md);
+  --#{$page}__main-section--MarginTop: var(--pf-t--global--spacer--md);
+  --#{$page}__main-section--PaddingTop: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-section--PaddingRight: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-section--PaddingBottom: 0;
+  --#{$page}__main-section--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-breadcrumb--main-section--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$page}__main-section--BackgroundColor: transparent;
+  --#{$page}__main-section--m-light--BackgroundColor: transparent;
+  --#{$page}__main-section--m-light-100--BackgroundColor: transparent;
+  --#{$page}__main-section--m-dark-100--BackgroundColor: transparent;
+  --#{$page}__main-section--m-dark-200--BackgroundColor: transparent;
+  --#{$page}__main-breadcrumb--page__main-tabs--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$page}__main-nav--page__main-tabs--PaddingTop: var(--pf-t--global--spacer--md);
 
   // Limit width
   --#{$page}--section--m-limit-width--MaxWidth: calc(#{pf-size-prem(2000px)} - var(--#{$page}__sidebar--Width));
@@ -137,13 +144,6 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}--section--m-shadow-top--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-top);
   --#{$page}--section--m-shadow-top--ZIndex: var(--#{$pf-global}--ZIndex--xs);
 
-  @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
-    --#{$page}__main-section--PaddingTop: var(--#{$page}__main-section--xl--PaddingTop);
-    --#{$page}__main-section--PaddingRight: var(--#{$page}__main-section--xl--PaddingRight);
-    --#{$page}__main-section--PaddingBottom: var(--#{$page}__main-section--xl--PaddingBottom);
-    --#{$page}__main-section--PaddingLeft: var(--#{$page}__main-section--xl--PaddingLeft);
-  }
-
   // Main section horizontal nav
   --#{$page}__main-nav--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
   --#{$page}__main-nav--PaddingTop: var(--#{$pf-global}--spacer--md);
@@ -152,11 +152,6 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main-nav--m-sticky-top--PaddingBottom: var(--#{$pf-global}--spacer--md);
   --#{$page}__main-nav--xl--PaddingRight: var(--#{$pf-global}--spacer--sm);
   --#{$page}__main-nav--xl--PaddingLeft: var(--#{$pf-global}--spacer--sm);
-
-  @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
-    --#{$page}__main-nav--PaddingRight: var(--#{$page}__main-nav--xl--PaddingRight);
-    --#{$page}__main-nav--PaddingLeft: var(--#{$page}__main-nav--xl--PaddingLeft);
-  }
 
   // Main section horizontal subnav
   --#{$page}__main-subnav--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-300);
@@ -169,34 +164,22 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 
   // Main section breadcrumb
-  --#{$page}__main-breadcrumb--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
-  --#{$page}__main-breadcrumb--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-breadcrumb--PaddingRight: var(--#{$pf-global}--spacer--md);
+  --#{$page}__main-breadcrumb--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$page}__main-breadcrumb--PaddingRight: var(--pf-t--global--spacer--md);
   --#{$page}__main-breadcrumb--PaddingBottom: 0;
-  --#{$page}__main-breadcrumb--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-breadcrumb--m-sticky-top--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-breadcrumb--xl--PaddingRight: var(--#{$pf-global}--spacer--lg);
-  --#{$page}__main-breadcrumb--xl--PaddingLeft: var(--#{$pf-global}--spacer--lg);
+  --#{$page}__main-breadcrumb--PaddingLeft: var(--pf-t--global--spacer--lg);
 
   // Main section tabs
   --#{$page}__main-tabs--PaddingTop: 0;
   --#{$page}__main-tabs--PaddingRight: 0;
   --#{$page}__main-tabs--PaddingBottom: 0;
   --#{$page}__main-tabs--PaddingLeft: 0;
-  --#{$page}__main-tabs--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
-
-  @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
-    --#{$page}__main-breadcrumb--PaddingRight: var(--#{$page}__main-breadcrumb--xl--PaddingRight);
-    --#{$page}__main-breadcrumb--PaddingLeft: var(--#{$page}__main-breadcrumb--xl--PaddingLeft);
-  }
 
   // Wizard main section
   --#{$page}__main-wizard--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
   --#{$page}__main-wizard--BorderTopColor: var(--#{$pf-global}--BorderColor--100);
   --#{$page}__main-wizard--BorderTopWidth: var(--#{$pf-global}--BorderWidth--sm);
   --#{$page}__main-wizard--m-light-200--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
-
-  // URL.com/guidelines#layout
 }
 
 .#{$page} {
@@ -223,6 +206,8 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 // Header
 .#{$page}__header,
 .#{$page} > .#{$masthead} {
+  --#{$masthead}--m-display-inline--GridTemplateColumns: var(--#{$page}__sidebar--Width) 1fr;
+  
   z-index: var(--#{$page}__header--ZIndex);
   grid-area: header;
 }
@@ -390,8 +375,6 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 // Sidebar
 .#{$page}__sidebar {
-  @include pf-v5-t-dark;
-
   z-index: var(--#{$page}__sidebar--ZIndex);
   display: flex;
   flex-direction: column;
@@ -399,6 +382,10 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   grid-row-start: 2;
   grid-column-start: 1;
   width: var(--#{$page}__sidebar--Width);
+  padding-top: 0;
+  padding-bottom: var(--pf-t--global--spacer--lg);
+  padding-left: var(--pf-t--global--spacer--lg);
+  margin-right: var(--#{$page}__sidebar--MarginRight); // TODO need variable
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
@@ -437,6 +424,19 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
     border-inline-end: var(--#{$page}__sidebar--m-light--BorderRightWidth) solid var(--#{$page}__sidebar--m-light--BorderRightColor);
   }
+}
+
+.#{$page}__sidebar-header {
+  padding-top: var(--#{$page}__sidebar-header--PaddingTop);
+  padding-bottom: var(--#{$page}__sidebar-header--PaddingBottom);
+  border-bottom: var(--#{$page}__sidebar-header--BorderBottomWidth) solid var(--#{$page}__sidebar-header--BorderBottomColor);
+}
+
+.#{$page}__sidebar-title {
+  font-family: var(--#{$page}__sidebar-title--FontFamily);
+  font-size: var(--#{$page}__sidebar-title--FontSize);
+  font-weight: var(--#{$page}__sidebar-title--FontWeight);
+  line-height: var(--#{$page}__sidebar-title--LineHeight);
 }
 
 .#{$page}__sidebar-body {
@@ -561,6 +561,19 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 }
 
 // Main & Drawer
+.#{$page}__main {
+  margin-top: 0;
+  margin-right: var(--pf-t--global--spacer--lg);
+  margin-left: var(--pf-t--global--spacer--lg);
+}
+
+.#{$page}__main-list {
+  padding-bottom: var(--pf-t--global--spacer--lg);
+  margin-bottom: var(--pf-t--global--spacer--lg);
+  background-color: var(--pf-t--global--background--color--primary--default);
+  border-radius: var(--pf-t--global--border--radius--large);
+}
+
 .#{$page}__main,
 .#{$page}__drawer {
   z-index: var(--#{$page}__main--ZIndex);
@@ -576,7 +589,8 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 .#{$page}__main,
 .#{$page}__main-drawer,
-.#{$page}__main-group {
+.#{$page}__main-group,
+.#{$page}__main-list {
   display: flex;
   flex-direction: column;
 }
